# mastery

./: .gitignore  .mastery.json  Dockerfile  README.md  config.js  github_code_colors.json  index.html  mastery.cabal  mastery.json  mockups.afdesign  script.js  shell.nix  stats.json  style.css
.stack-work/install/x86_64-osx/lts-3.6/7.10.2/flag-cache/: aeson-0.8.0.2-85507016086edfeeee941f8a8eed5cd2  attoparsec-0.12.1.6-30e5084e644de48e9dbea3015bff78f0  blaze-builder-0.4.0.1-3535340588cd7e9d9c0abd96eedc76ec  cassava-0.4.4.0-1fc6626dd4572e50047f17e6da9b8c33  dlist-0.7.1.2-31419d498459d3448eddd9aba0883e21  hashable-1.2.3.3-09c4177c49dd46a63f7036317bb17114  mastery-0.1.0.0-43466d0f500861cffc5bbb6f4e73a0f9  mastery-0.1.0.0-8449571f0e584b0565006ac74ad1384f  mastery-0.1.0.0-9399e79663c305a17be54d629b6cb149  mastery-0.1.0.0-b4dc4d4b35585cf284bd49ca05ab6cb8  mastery-0.1.0.0-e54527625967bb5fd4b8b166bc9fe304  mtl-2.2.1-5cf332b11edb88a6040af20fd6a58acb  primitive-0.6-f39f6bcba2f66e648d35c2c6a451ec07  scientific-0.3.3.8-6eb85cb64de9dfedbefd51cace55550b  syb-0.5.1-09089498a055bd723b4a95c1351d3c8a  text-1.2.1.3-2395ef415c1b20175aae83b50060e389  unordered-containers-0.2.5.1-09ed02f61ed89449c8cd4b51d7f295c2  vector-0.10.12.3-c6e124f63e87ac124e3bbb7bdf0ab89f
.stack-work/install/x86_64-osx/lts-3.6/7.10.2/lib/x86_64-osx-ghc-7.10.2/mastery-0.1.0.0-27F0IDANFbGB10yAIRIFKS/: libHSmastery-0.1.0.0-27F0IDANFbGB10yAIRIFKS-ghc7.10.2.dylib
.stack-work/install/x86_64-osx/lts-3.6/7.10.2/pkgdb/: mastery-0.1.0.0-b4dc4d4b35585cf284bd49ca05ab6cb8.conf  package.cache
app/: Main.hs
(+4 files in other folders)
