name:                mastery
version:             0.1.0.0
synopsis:            Track your pursuit of mastery
description:         Please see README.md
homepage:            http://github.com/davidrusu/mastery
license:             BSD3
license-file:        LICENSE
author:              David Rusu
maintainer:          davidrusu.me@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable mastery
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mastery
                     , process
                     , aeson >= 0.8 && < 0.9
                     , bytestring >= 0.10 && < 0.11
                     , filepath >= 1.4 && < 1.5
                     , directory >= 1.2 && < 1.3
                     , cassava >= 0.4 && < 0.5
                     , vector >= 0.10 && < 0.12
  default-language:    Haskell2010

test-suite mastery-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mastery
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/davidrusu/mastery
